[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Esc_UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/png_res/moon.png" type="Texture" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/planet.gd" type="Script" id=4]
[ext_resource path="res://scenes/png_res/asteroizi/ast13.png" type="Texture" id=5]
[ext_resource path="res://scenes/png_res/asteroizi/ast14.png" type="Texture" id=6]
[ext_resource path="res://scenes/png_res/asteroizi/ast15.png" type="Texture" id=7]
[ext_resource path="res://scenes/png_res/asteroizi/ast1.png" type="Texture" id=8]
[ext_resource path="res://scenes/png_res/asteroizi/ast2.png" type="Texture" id=9]
[ext_resource path="res://scenes/png_res/tutorial_planet.png" type="Texture" id=10]
[ext_resource path="res://scenes/tutorial_complete.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/png_res/Debris_big.png" type="Texture" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Orbitron-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.5, 346.25 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="tutorial_complete" parent="." instance=ExtResource( 11 )]

[node name="pause" parent="." instance=ExtResource( 1 )]
pause_mode = 2

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 135, 478 )
collision_layer = 2
run_speed = 150
jump_speed = -300
gravity = 600

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 140, -141 )
current = true

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2( 1432, 682 )
scale = Vector2( 6.391, 1 )
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( 306, 191.5, -306, 191.5, -306, -191.5, 306, -191.5 )

[node name="Moon" type="Sprite" parent="ground"]
show_behind_parent = true
texture = ExtResource( 2 )

[node name="Instr" type="Label" parent="."]
margin_left = 90.0
margin_top = 261.0
margin_right = 378.0
margin_bottom = 294.0
custom_fonts/font = SubResource( 2 )
text = "Use A and D to move
Press W to jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instr2" type="Label" parent="."]
margin_left = 936.0
margin_top = 84.0
margin_right = 1263.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 2 )
text = "Use the controls to
get across the rocks
Press R if you get stuck"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instr3" type="Label" parent="."]
margin_left = 2121.0
margin_top = 81.0
margin_right = 2448.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 2 )
text = "Hold SPACE to
shoot the debris"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftwall" type="StaticBody2D" parent="."]
position = Vector2( -3, 260 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftwall"]
shape = SubResource( 3 )

[node name="rightwall" type="StaticBody2D" parent="."]
position = Vector2( 2059, 250 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightwall"]
position = Vector2( 722, -76 )
shape = SubResource( 3 )

[node name="rocks" type="StaticBody2D" parent="."]
position = Vector2( 976, 471 )
collision_mask = 2

[node name="Ast15" type="Sprite" parent="rocks"]
texture = ExtResource( 7 )

[node name="Ast13" type="Sprite" parent="rocks"]
position = Vector2( 96, -5 )
texture = ExtResource( 5 )

[node name="Ast14" type="Sprite" parent="rocks"]
position = Vector2( 109, -44 )
texture = ExtResource( 6 )

[node name="Ast16" type="Sprite" parent="rocks"]
position = Vector2( 129, -52 )
texture = ExtResource( 7 )

[node name="Ast17" type="Sprite" parent="rocks"]
position = Vector2( 185, 1 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rocks"]
polygon = PoolVector2Array( 8, -14.6, 16, -1.8, 16, 5.2, 14.4, 10, 12.7, 10, 5.9, 16, -10.4, 16, -12, 15.2, -12, 14, -16, 11, -16, -1.2, -14.6, -8, -12.7, -8, -4, -15, -4, -16, 8, -16 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 96, -5 )
polygon = PoolVector2Array( 16, -21.7, 16, -19.9, 26, -10.9, 26, -8, 27.2, 4, 26, 4, 26, 7, 23.8, 7, 7.8, 23, 5.5, 23, 0.6, 26, -9.5, 26, -13, 24.2, -13, 22.7, -20, 14.8, -20, 10, -22.2, -9, -21, -9, -21, -18, -18.7, -18, -12, -23.9, -12, -26.4 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 109, -44 )
polygon = PoolVector2Array( 2, -31.3, 2, -29.7, 10, -25.7, 10, -23.2, 13, -19.2, 13, -7.5, 11.5, -7.5, 8.5, 3.5, 6.9, 3.5, -9.1, 20.5, -20.8, 20.5, -30, 12.4, -30, 2.1, -21.4, -20.5, -19.9, -20.5, -12, -30.2, -12, -32.7 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 109, -44 )
polygon = PoolVector2Array( 27, 12.7, 27, 14.5, 32, 18.5, 32, 26.5, 30, 26.5, 22, 37.5, 19.2, 37.5, 9.9, 38.5, 8, 38.5, 8, 36.6, 5, 34.6, 5, 27.3, 7.4, 16.5, 9.4, 16.5, 14, 13.4, 14, 11.3 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 129, -52 )
polygon = PoolVector2Array( 8, -14.6, 16, -1.8, 16, 5.2, 14.4, 10, 12.7, 10, 5.9, 16, -10.4, 16, -12, 15.2, -12, 14, -16, 11, -16, -1.2, -14.6, -8, -12.7, -8, -4, -15, -4, -16, 8, -16 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 185, 1 )
polygon = PoolVector2Array( 16, -21.7, 16, -19.9, 26, -10.9, 26, -8, 27.2, 4, 26, 4, 26, 7, 23.8, 7, 7.8, 23, 5.5, 23, 0.6, 26, -9.5, 26, -13, 24.2, -13, 22.7, -20, 14.8, -20, 10, -22.2, -9, -21, -9, -21, -18, -18.7, -18, -12, -23.9, -12, -26.4 )

[node name="Ast2" type="Sprite" parent="rocks"]
position = Vector2( 222, -87 )
texture = ExtResource( 9 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 222, -87 )
polygon = PoolVector2Array( 11, -61.8, 71, -35.8, 71, -34.5, 80, -27.5, 80, -23.5, 81.1, -4.5, 79.5, -4.5, 64.5, 43.5, 63, 43.5, 55, 54.5, 52.7, 54.5, 41.7, 62.5, 36.3, 62.5, 1.1, 67.5, -51, 67.5, -51, 66, -64, 63.1, -64, 61.4, -76, 48.3, -76, 45.8, -82, 27.8, -82, 21.5, -83.1, 2.5, -81.8, 2.5, -78.8, -25.5, -77.2, -25.5, -71.2, -36.5, -69.8, -36.5, -50.8, -55.5, -46.5, -55.5, -39.5, -59.5, -32.4, -59.5, -18, -62.2, -18, -63.5, 11, -63.5 )

[node name="Ast1" type="Sprite" parent="rocks"]
position = Vector2( 643, -172 )
rotation = 0.460631
texture = ExtResource( 8 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 643, -172 )
rotation = 0.460631
polygon = PoolVector2Array( 23.5, -219.3, 64.5, -201.3, 64.5, -200.2, 74.5, -195.2, 74.5, -193.9, 85.5, -183.9, 85.5, -181.7, 160.5, -95.7, 160.5, -93.7, 169.5, -83.8, 169.5, -81.5, 191.6, -44, 192.3, -44, 223.5, -12.8, 223.5, -10.7, 230.5, -1.7, 230.5, 0.699997, 236.5, 20.7, 236.5, 37.2, 231.1, 60, 229.7, 60, 221.7, 76, 220.3, 76, 188.3, 109, 186.2, 109, 152.2, 137, 150.1, 137, 98.1, 170, 96.1, 170, 54, 193, 50.9, 193, -8.2, 214, -56.5, 214, -56.5, 212.7, -86.5, 206.6, -86.5, 205.4, -116.5, 194.4, -116.5, 193, -133.5, 181, -133.5, 179.8, -160.5, 153.9, -160.5, 151.9, -195.5, 114.8, -195.5, 112.7, -213.5, 88.7, -213.5, 86.5, -227.5, 60.5, -227.5, 56.4, -234.5, 38.4, -234.5, 22, -233, 22, -231.1, 14, -229.5, 14, -220.5, 1, -219.3, 1, -174.5, -43.8, -174.5, -45.7, -138.5, -91.7, -138.5, -93.5, -110.7, -143, -109.4, -143, -82.4, -174, -80.2, -174, -55.2, -193, -53, -193, -28, -207, -25, -207, -11, -214, -7.60001, -214, 11.5, -219.5, 23.5, -220 )

[node name="Ast18" type="Sprite" parent="rocks"]
position = Vector2( 362, -199 )
rotation = -1.44388
texture = ExtResource( 6 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 362, -199 )
rotation = -1.44388
polygon = PoolVector2Array( 2, -31.3, 2, -29.7, 10, -25.7, 10, -23.2, 13, -19.2, 13, -7.5, 11.5, -7.5, 8.5, 3.5, 6.9, 3.5, -9.1, 20.5, -20.8, 20.5, -30, 12.4, -30, 2.1, -21.4, -20.5, -19.9, -20.5, -12, -30.2, -12, -32.7 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="rocks"]
position = Vector2( 362, -199 )
rotation = -1.44388
polygon = PoolVector2Array( 27, 12.7, 27, 14.5, 32, 18.5, 32, 26.5, 30, 26.5, 22, 37.5, 19.2, 37.5, 9.9, 38.5, 8, 38.5, 8, 36.6, 5, 34.6, 5, 27.3, 7.4, 16.5, 9.4, 16.5, 14, 13.4, 14, 11.3 )

[node name="EndTutorialArea" type="Area2D" parent="."]
position = Vector2( 2709, 434 )

[node name="TutorialPlanet" type="Sprite" parent="EndTutorialArea"]
position = Vector2( 0.75, 0.250061 )
scale = Vector2( 0.10061, 0.100499 )
texture = ExtResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EndTutorialArea"]
position = Vector2( 0.75, 0.250061 )
scale = Vector2( 0.10061, 0.100499 )
polygon = PoolVector2Array( 14, -250.4, 15.4, -247, 51, -247, 51, -244.4, 52.4, -241, 118, -241, 118, -238.4, 119.4, -235, 130, -235, 130, -232.7, 137, -224, 149, -224, 149, -221.4, 150.4, -218, 153.8, -218, 157, -214.8, 157, -212, 159.8, -212, 163, -208.8, 163, -206, 165.8, -206, 169, -202.8, 169, -200, 171.8, -200, 175, -196.8, 175, -195, 183.8, -195, 187, -191.8, 187, -183, 191.4, -183, 193.4, -177, 196.8, -177, 200, -173.8, 200, -171, 203.4, -171, 205.4, -166, 208.8, -166, 212, -162.8, 212, -154, 216, -154, 216, -151.4, 217.4, -148, 220.8, -148, 224, -144.8, 224, -137, 227.4, -137, 229.4, -131, 232.8, -131, 236, -127.8, 236, -119, 239.8, -119, 243, -115.8, 243, -101.4, 249, -99.4, 249, -85, 251.8, -85, 255, -81.8, 255, -61, 257.8, -61, 261, -57.8, 261, -26.4, 267, -24.4, 267, 8, 264.5, 8, 261, 9.39999, 261, 59.4, 255, 61.4, 255, 84, 252.5, 84, 249, 85.4, 249, 100.4, 243, 102.4, 243, 113, 240.5, 113, 237, 114.4, 237, 124, 234.5, 124, 231, 125.4, 231, 135, 228.5, 135, 225, 137.1, 225, 147, 222.5, 147, 219, 148.4, 219, 151.8, 215.8, 155, 212, 155, 212, 158.4, 207, 160.4, 207, 163.2, 205.6, 170, 203.5, 170, 200, 171.4, 200, 174.8, 196.8, 178, 194, 178, 194, 180.8, 190.8, 184, 188, 184, 188, 186.8, 184.8, 190, 181.2, 190, 178.2, 196, 176, 196, 176, 197.8, 172.8, 201, 170, 201, 170, 203.8, 166.8, 207, 157.2, 207, 154.2, 213, 151, 213, 151, 215.8, 147.8, 219, 145, 219, 145, 221.8, 141.8, 225, 132, 225, 124, 236, 113.4, 236, 111.4, 242, 102, 242, 102, 244.8, 98.8, 248, 83.2, 248, 80.2, 254, 58.4, 254, 56.4, 259, 3.39999, 259, 1.39999, 265, -27, 265, -27, 262.5, -28.4, 259, -50.4, 259, -52.4, 253, -75.4, 253, -77.4, 247, -94, 247, -94, 244.5, -95.4, 241, -106, 241, -106, 238.5, -107.3, 236, -125, 236, -125, 233.5, -126.4, 230, -129.8, 230, -133, 226.8, -133, 224, -135.8, 224, -139, 220.8, -139, 218, -149, 218, -149, 215.5, -150.4, 212, -154.4, 212, -156.4, 207, -159.8, 207, -163, 203.8, -163, 201, -174, 201, -174, 198.4, -175.7, 190, -179.6, 190, -194, 181.1, -194, 172, -203.8, 172, -207, 168.8, -207, 161, -211, 161, -211, 158.4, -212.4, 155, -215.8, 155, -219, 151.8, -219, 143.4, -225, 141.4, -225, 132, -228.4, 132, -230.4, 126, -233.8, 126, -237, 122.8, -237, 115, -239.8, 115, -244, 110.8, -244, 97, -247.4, 97, -249.4, 91, -252.8, 91, -256, 87.8, -256, 44.4, -262, 42.4, -262, 16, -264.8, 16, -268, 12.8, -268, -12.4, -262, -14.4, -262, -48, -259.4, -48, -256, -49.4, -256, -71, -253.3, -71, -249, -72.4, -249, -89, -246.4, -89, -243, -90.4, -243, -106, -240.4, -106, -237, -107.4, -237, -118, -234.4, -118, -231, -119.4, -231, -129, -228.4, -129, -225, -130.4, -225, -140, -222.4, -140, -219, -141.4, -219, -152, -216.3, -152, -212, -153.4, -212, -156.8, -208.8, -160, -206, -160, -206, -169, -203.4, -169, -200, -170.4, -200, -173.8, -196.8, -177, -194, -177, -194, -179.8, -190.8, -183, -188, -183, -188, -185.8, -184.8, -189, -182, -189, -182, -191.8, -178.8, -195, -175.4, -195, -173.4, -200, -170, -200, -170, -202.8, -166.8, -206, -163, -206, -163, -209.4, -157, -211.4, -157, -214.8, -153.8, -218, -146, -218, -146, -222, -143.3, -222, -139, -223.4, -139, -226.8, -135.8, -230, -126.4, -230, -124.4, -236, -114.4, -236, -112.4, -241, -103, -241, -103, -243.8, -99.8, -247, -83.4, -247, -82, -250.4, -82, -253, 14, -253 )

[node name="Debris" type="StaticBody2D" parent="." groups=["destroyable"]]
position = Vector2( 2305, 425 )
collision_layer = 4
collision_mask = 2

[node name="DebrisBig" type="Sprite" parent="Debris"]
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Debris"]
polygon = PoolVector2Array( -27, -58, -27, -55.7, -24, -51.7, -24, -40.7, -24.5, -39.3, -20.2, -34.2, -15, -37.3, -13, -36.2, -13, -34.9, 4, -18.9, 4, -11, 2, -11, -1, -7, -8.9, -7, -6, 0, -9, 0, -12, 4, -20, 4, -20, 1.9, -37, -14.1, -37, -17.7, -35, -20.3, -38.9, -25, -40.8, -25, -53, -23.8, -53, -25.9, -64, -33.2, -64, -51, -59.8, -55, -57.8, -55, -49, -63.8, -35, -64 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Debris"]
polygon = PoolVector2Array( 45, -51.8, 45, -43.6, 43.6, -40.2, 60, -15.6, 60, -3.2, 53.8, 3, 50.9, 3, 35, 1.9, 35, 0.400002, 21, -4.6, 21, -6.1, 3, -21.1, 3, -23.3, -3.3, -31.8, -2.2, -34, -0.900002, -34, 7.1, -43, 9.6, -43, 11.2, -41.9, 20.3, -48, 19.7, -48.8, 20.8, -51, 22.8, -51, 29.1, -51.8, 34, -57.7, 34, -59.3, 36.5, -60.4 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Debris"]
polygon = PoolVector2Array( -42, 4.4, -28, 1.6, -28, 4, -20, 10, -20, 13.1, -20.8, 23.2, -5, 45.4, -5, 49, -3.8, 62, -6, 62, -7.5, 64, -30.1, 64, -43, 59.4, -43, 57.9, -61, 42.9, -61, 40.8, -64, 37.8, -64, 22, -58.8, 17, -57.3, 17, -58.6, 12, -55.8, 12, -53, 9.2, -53, 1.4 )

[connection signal="continue_pressed" from="tutorial_complete" to="." method="_on_tutorial_complete_continue_pressed"]
[connection signal="body_entered" from="EndTutorialArea" to="." method="_on_EndTutorialArea_body_entered"]
